// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapPanelContainer should render MapLegend if store contains active map layers 1`] = `
<section
  aria-expanded={true}
  aria-label="Kaartlagen legenda, Kaartlagen verbergen"
  className="
          map-panel
          map-panel--expanded
          map-panel--has-active-layers
          map-panel--has-just-invisible-layers
        "
>
  <div
    className="map-panel__heading"
  >
    <button
      className="map-panel__toggle"
      onClick={[Function]}
      title="Kaartlagen verbergen"
    >
      <Component
        className="map-panel__heading-icon"
      />
      <h2
        aria-hidden="true"
        className="map-panel__heading-title"
      >
        Kaartlagen
      </h2>
      <Component
        className="map-panel__toggle-icon map-panel__toggle-icon--expanded"
      />
      <Component
        className="map-panel__toggle-icon map-panel__toggle-icon--collapsed"
      />
    </button>
  </div>
  <div
    className="scroll-wrapper"
  >
    <MapLegend
      activeMapLayers={
        Array [
          Object {},
        ]
      }
      onLayerToggle={[Function]}
      onLayerVisibilityToggle={[Function]}
      overlays={
        Array [
          Object {
            "isVisible": true,
          },
        ]
      }
      user={Object {}}
      zoomLevel={0}
    />
    <MapPanelHandle
      isMapPanelHandleVisible={true}
      onMapPanelHandleToggle={[Function]}
    >
      <MapType
        activeBaseLayer=""
        baseLayers={Object {}}
        onBaseLayerToggle={[Function]}
      />
      <MapLayers
        activeMapLayers={
          Array [
            Object {},
          ]
        }
        layers={Array []}
        onLayerToggle={[Function]}
      />
    </MapPanelHandle>
  </div>
</section>
`;

exports[`MapPanelContainer should render MapType and MapLayers 1`] = `
<section
  aria-expanded={true}
  aria-label="Kaartlagen legenda, Kaartlagen verbergen"
  className="
          map-panel
          map-panel--expanded
          map-panel--has-no-active-layers
          map-panel--has-not-just-invisible-layers
        "
>
  <div
    className="map-panel__heading"
  >
    <button
      className="map-panel__toggle"
      onClick={[Function]}
      title="Kaartlagen verbergen"
    >
      <Component
        className="map-panel__heading-icon"
      />
      <h2
        aria-hidden="true"
        className="map-panel__heading-title"
      >
        Kaartlagen
      </h2>
      <Component
        className="map-panel__toggle-icon map-panel__toggle-icon--expanded"
      />
      <Component
        className="map-panel__toggle-icon map-panel__toggle-icon--collapsed"
      />
    </button>
  </div>
  <div
    className="scroll-wrapper"
  >
    <MapPanelHandle
      isMapPanelHandleVisible={true}
      onMapPanelHandleToggle={[Function]}
    >
      <MapType
        activeBaseLayer=""
        baseLayers={Object {}}
        onBaseLayerToggle={[Function]}
      />
      <MapLayers
        activeMapLayers={Array []}
        layers={Array []}
        onLayerToggle={[Function]}
      />
    </MapPanelHandle>
  </div>
</section>
`;
